# gobang

./: CMakeLists.txt  README.md
include/: define.h  evaluate.h  gameover.h  makemove.h  print.h  searchmove.h
src/: define.c  evaluate.c  gameover.c  main.c  makemove.c  print.c  searchmove.c
